# simple-db

./: Cargo.toml  MACRO_IMPLEMENTATION.md  MACRO_STATUS.md  README.md  WORKSPACE.md  test_lib.txt  test_output.txt
archive/simple-db-old/: GENERIC_PERFORMANCE_IMPROVEMENTS.md  README.md
archive/simple-db-old/examples/: memory_efficient_queries.rs
archive/simple-db-old/simple-db-macro/src/: lib.rs
archive/simple-db-old/simple-db/benches/: simple_db_bench.rs
archive/simple-db-old/simple-db/src/: context.rs  lib.rs
archive/simple-db-old/simple-db/src/driver/: driver.rs
archive/simple-db-old/simple-db/src/driver/memory/: comparison.rs  mod.rs
archive/simple-db-old/simple-db/src/entity/: entity.rs
archive/simple-db-old/simple-db/src/query/: mod.rs
archive/simple-db-old/simple-db/src/query/filters/: filter.rs  mod.rs
archive/simple-db-old/simple-db/src/query/groups/: mod.rs
archive/simple-db-old/simple-db/src/query/projections/: projection_builder.rs
archive/simple-db-old/simple-db/src/query/sorts/: sort.rs
archive/simple-db-old/simple-db/src/types/: mod.rs  row.rs  value.rs
archive/simple-db-old/simple-db/tests/: integration_entity.rs  integration_filters.rs
drivers/simple-db-driver/: Cargo.toml
drivers/simple-db-driver/src/: driver.rs  lib.rs
drivers/simple-db-driver/src/types/: cursor.rs  mod.rs
drivers/simple-db-memory/: Cargo.toml
drivers/simple-db-memory/src/: driver.rs  lib.rs
drivers/simple-db-memory/src/builders/: filters.rs  mod.rs
drivers/simple-db-memory/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-mysql/: Cargo.toml
drivers/simple-db-mysql/src/: lib.rs
drivers/simple-db-mysql/src/builders/: filters.rs  mod.rs
drivers/simple-db-mysql/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-mysql/src/queries/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-mysql/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-postgres/: Cargo.toml
drivers/simple-db-postgres/src/: lib.rs
drivers/simple-db-postgres/src/builders/: filters.rs  groups.rs  mod.rs  projections.rs  sorts.rs
drivers/simple-db-postgres/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-postgres/src/queries/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-postgres/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-sqlite/: Cargo.toml
drivers/simple-db-sqlite/src/: lib.rs
drivers/simple-db-sqlite/src/builders/: filters.rs  groups.rs  mod.rs  projections.rs  sorts.rs
drivers/simple-db-sqlite/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-sqlite/src/queries/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-sqlite/src/types/: cursor.rs  mod.rs  row.rs
examples/: db_entity_macro_example.rs  macro_usage_example.rs
simple-db/: Cargo.toml
simple-db-core/: Cargo.toml
simple-db-core/src/: context.rs  cursor.rs  error.rs  lib.rs  result.rs  row.rs  value.rs
simple-db-core/src/driver/: driver.rs  executor.rs  transaction.rs
simple-db-core/src/query/builders/: mod.rs
simple-db-core/src/query/builders/filters/: filter_builder.rs  mod.rs
simple-db-core/src/query/builders/groups/: group_builder.rs  mod.rs
simple-db-core/src/query/builders/projections/: mod.rs  projection.rs  projection_builder.rs
simple-db-core/src/query/builders/sorts/: mod.rs  sort.rs
simple-db-core/src/query/queries/: delete.rs  find.rs  mod.rs  update.rs
simple-db-core/src/types/: mod.rs
simple-db-driver/: Cargo.toml
simple-db-driver/src/: lib.rs
simple-db-driver/src/types/: cursor.rs  mod.rs  row.rs
simple-db-macro/: Cargo.toml
simple-db-macro/src/: lib.rs
simple-db-macros/: Cargo.toml
simple-db-macros/src/: lib.rs
simple-db-orm/: Cargo.toml
simple-db-orm/src/: cursor.rs  entity.rs  lib.rs
simple-db-query/: Cargo.toml
simple-db-query/src/: driver.rs  lib.rs
simple-db-query/src/builders/: mod.rs
simple-db-query/src/builders/filters/: filter.rs  filter_builder.rs  mod.rs
simple-db-query/src/builders/groups/: group_builder.rs  mod.rs
simple-db-query/src/builders/projections/: mod.rs  projection.rs  projection_builder.rs
simple-db-query/src/builders/sorts/: mod.rs  sort.rs  sort_builder.rs
simple-db-query/src/queries/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
simple-db-query/src/query/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
simple-db-query/src/types/: error.rs  mod.rs  row.rs  value.rs
simple-db/src/: context.rs  lib.rs
simple-db/src/driver/: mod.rs
simple-db/src/driver/memory/: comparison.rs  mod.rs
simple-db/src/entity/: entity.rs  mod.rs
simple-db/src/query/: mod.rs
simple-db/src/query/filters/: filter.rs  filter_builder.rs
simple-db/src/query/groups/: group_builder.rs  mod.rs
simple-db/src/query/projections/: mod.rs  projection.rs  projection_builder.rs
simple-db/src/query/sorts/: mod.rs  sort.rs  sort_builder.rs
simple-db/src/types/: error.rs  mod.rs  row.rs  value.rs
simple-db/tests/: integration_crud.rs  integration_entity.rs  integration_macro.rs
src/: error.rs  lib.rs  value.rs
src/driver/: driver.rs  mod.rs
src/driver/memory/: comparison.rs  mod.rs
src/entity/: entity.rs  mod.rs
src/query/: db_values.rs  mod.rs
src/query/filters/: filter.rs  filter_definition.rs  mod.rs
src/query/groups/: group_definition.rs  mod.rs
src/query/projections/: mod.rs  projection.rs  projection_definition.rs
src/query/sorts/: mod.rs  sort.rs  sort_definition.rs
src/types/: error.rs  mod.rs  row.rs  value.rs
tests/: integration_crud.rs  integration_filters.rs
tests/simple-db-mysql-test/: Cargo.toml
tests/simple-db-mysql-test/src/: main.rs
tests/simple-db-postgres-test/: Cargo.toml
tests/simple-db-postgres-test/src/: main.rs
tests/simple-db-sqlite-test/: Cargo.toml
tests/simple-db-sqlite-test/src/: main.rs
tests/simple-db-test-lib/: Cargo.toml
tests/simple-db-test-lib/src/: bench.rs  benchmarks.rs  harness.rs  lib.rs  orm_tests.rs  report.rs  runner.rs  suite.rs
