[workspace]
resolver = "3"
members = [
    "simple-db",
    "simple-db-core",
    "simple-db-orm",
    "simple-db-macros",
    "drivers/simple-db-mysql",
    "drivers/simple-db-postgres",
    "drivers/simple-db-sqlite",
    "tests/simple-db-test-lib",
    "tests/simple-db-sqlite-test",
    "tests/simple-db-postgres-test",
    "tests/simple-db-mysql-test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# --- Internal ---
simple-db      = { path = "simple-db" }
simple-db-core = { path = "simple-db-core"}
simple-db-orm = { path = "simple-db-orm"}
simple-db-macros = { path = "simple-db-macros"}
simple-db-mysql = { path = "drivers/simple-db-mysql"}
simple-db-postgres = { path = "drivers/simple-db-postgres"}
simple-db-sqlite = { path = "drivers/simple-db-sqlite"}
simple-db-test-lib = { path = "tests/simple-db-test-lib"}

# --- Serialization & Formats ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# --- Types & Utils---
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde-float"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
regex = "1.12.3"
thiserror = "2"

# --- Collections ---
smallvec = "1.11"
smol_str = "0.3"

# --- SQL ---
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "uuid", "macros"] }

# --- Async & Runtime ---
tokio = { version = "1.52.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"