[package]
name = "simple-db-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Serialization & Formats ---
serde = { workspace = true }
serde_json = { workspace = true }

# --- Types & Utils---
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }
