[package]
name = "simple-db-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-core = { workspace = true }
simple-db-query = { workspace = true }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }
