[package]
name = "simple-db-orm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-core = { workspace = true }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }