[package]
name = "simple-db-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Serialization & Formats ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# --- Types & Utils---
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde-float"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }
regex = "1.12.3"
rand = "0.10.0"
paste = "1.0"

# --- Async & Runtime ---
tokio = { version = "1.51.0", features = ["full"] }
async-trait = "0.1"

# --- Collections ---
smallvec = "1.11"
once_cell = "1.19"
smol_str = "0.3"

# --- Error ---
thiserror = "2.0.18"