[package]
name = "simple-db-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Serialization & Formats ---
serde = { workspace = true }
serde_json = { workspace = true }

# --- Types & Utils---
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

# --- Collections ---
smallvec = { workspace = true }
smol_str = { workspace = true }

# --- Error ---
thiserror = { workspace = true }


