[package]
name = "simple-db-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-query = { workspace = true }
simple-db-driver = { workspace = true }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }