[package]
name = "simple-db-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-core = { workspace = true }

thiserror = { workspace = true }

# --- SQL ---
sqlx         = { workspace = true, features = ["mysql", "rust_decimal"] }
rust_decimal = { workspace = true }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
