[package]
name = "simple-db-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-query = { workspace = true }
simple-db-driver = { workspace = true }

# --- SQL ---
sqlx = { workspace = true, features = ["sqlite"] }

# --- Async & Runtime ---
tokio = { workspace = true }
async-trait = { workspace = true }