[package]
name = "simple-db-postgres-test"
version.workspace = true
edition.workspace = true

[[bin]]
name = "simple-db-postgres-test"
path = "src/main.rs"

[dependencies]
sqlx = { workspace = true, features = ["postgres"] }
simple-db = { workspace = true, features = ["postgres"] }
simple-db-test-lib.workspace = true
tokio.workspace = true